--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="css/calculator.css">
 </head>
 <body>
-    
-    <script src="Calculator/js/script.js"></script>
+    <div class="calcBodyOutside">
+        <div class="calcBodyInside">
+            <h1>Calculator</h1>
+            <p id="resultado"></p>
+            <table>
+                <tr>
+                    <td>
+                        <button class="botao" onclick="insert('7')">7</button>
+                        <button class="botao" onclick="insert('8')">8</button>
+                        <button class="botao" onclick="insert('9')">9</button>
+                        <button class="botao" onclick="insert('/')">/</button>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td>
+                        <button class="botao" onclick="insert('4')">4</button>
+                        <button class="botao" onclick="insert('5')">5</button>
+                        <button class="botao" onclick="insert('6')">6</button>
+                        <button class="botao" onclick="insert('*')">*</button>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td>
+                        <button class="botao" onclick="insert('1')">1</button>
+                        <button class="botao" onclick="insert('2')">2</button>
+                        <button class="botao" onclick="insert('3')">3</button>
+                        <button class="botao" onclick="insert('-')">-</button>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td>
+                        <button class="botao" onclick="clean()">C</button>
+                        <button class="botao" onclick="insert('0')">0</button>
+                        <button class="botao" onclick="calcular()">=</button>
+                        <button class="botao" onclick="insert('+')">+</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <footer>
+        <p>Developed by Carlos Eduardo</p>
+    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
