--- a/vue/exercicios/basico.html
+++ b/vue/exercicios/basico.html
@@ -38,7 +38,7 @@
 </html>
 
 <!-- 
-    Instacia vie quando vc cria ela e associa ela a um texto html o vue passa a controlar aquela parte html
+    Instacia vue quando vc cria ela e associa ela a um texto html o vue passa a controlar aquela parte html
     
     el: '#app' = elemente ele é o seletor que vc passa que voce queira que o vue controle
     data: dentro dele vc pode colocar seus dados que vc queira que fique disponivel dentro da sua aplicação usando vue
